force-app/main/default/objects/AI_Prediction__c/AI_Prediction__c.object-meta.xml
<CustomObject>
    <label>AI Prediction</label>
    <nameField>
        <label>AI Prediction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ai Predictions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>