force-app/main/default/objects/AI_Prediction__c/fields/Pre__c.field-meta.xml
<CustomField>
    <fullName>Pre__c</fullName>
    <label>Prediction result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Potential</fullName>
            </value>
            <value>
                <fullName>Medium Potential</fullName>
            </value>
            <value>
                <fullName>Low Potential</fullName>
            </value>
            <value>
                <fullName>Hot Lead</fullName>
            </value>
            <value>
                <fullName>Warm Lead</fullName>
            </value>
            <value>
                <fullName>Cold Lead</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>