force-app/main/default/objects/AI_Prediction__c/fields/Recommondation__c.field-meta.xml
<CustomField>
    <fullName>Recommondation__c</fullName>
    <label>Recommendation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>